# LazyVlogRecorder

./: .env.example  .gitignore  README-vi.md  README.md  index.html  package.json  vitest.config.ts
docs/: codebase-summary.md  deployment-guide.md  project-overview.md  sensor-api.md  system-architecture.md  usage-guide.md
docs/journals/: 20260708-lazycamhud-greenfield-to-ship.md
docs/vi/: codebase-summary.md  deployment-guide.md  project-overview.md  sensor-api.md  system-architecture.md  usage-guide.md
scripts/: feed-mqtt-sondehub.mjs  fetch-ffmpeg.ps1  fetch-ffmpeg.sh  local-rtmp-sink.md  make_icon.py  mock-sonde.mjs  replay-sonde-log.mjs  spike-mediarecorder-h264-gop.md
src/: App.css  App.tsx  main.tsx  vitest.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  ffmpeg.rs  geo.rs  library.rs  mod.rs  recording_fs.rs  sensor_server.rs  streaming.rs  system_vitals.rs  weather.rs
src/auth/: auth-client.ts  change-pin-flow.tsx  pin-flow.test.tsx  pin-gate.css  pin-gate.tsx  pin-pad.tsx
src/components/: hud-select.css  hud-select.test.tsx  hud-select.tsx
src/compositor/: canvas-compositor.ts  media-devices.ts
src/data/: geolocation-client.ts  hud-data-source.ts  metric-mapping.test.ts  metric-mapping.ts  system-vitals-client.ts  weather-client.ts
src/hud/: audio-analyser.ts  layout-engine.test.ts  layout-engine.ts  layout-registry.ts  mock-hud-state.ts  theme-registry.ts  theme.ts  types.ts
src/hud/layouts/: martian.layout.ts  minimal.layout.ts  recon.layout.ts
src/hud/widgets/: caption-widget.ts  frame-widgets.ts  gauge-arc-fraction.test.ts  gauge-arc.ts  readout-widgets.ts  sensor-panel-widget.ts  series-panel-widget.ts  signal-noise.ts  soundwave-widget.ts  text-primitives.ts  vitals-strip-widget.ts
src/platform/: platform.ts
src/recording/: capability.test.ts  capability.ts  keyboard-shortcuts.test.ts  keyboard-shortcuts.ts  output-naming.test.ts  output-naming.ts  recorder.test.ts  recorder.ts  recording-controls.test.tsx  recording-controls.tsx  save-client.ts  screen-wake-lock.ts  use-capture-timer.test.ts  use-capture-timer.ts  use-recorder.ts
src/settings/: config-store.test.ts  config-store.ts  is-stream-configured.test.ts  is-stream-configured.ts  rtmp-url.test.ts  rtmp-url.ts  settings-panel.test.tsx  settings-panel.tsx
src/streaming/: stream-client.ts  use-streaming.test.ts  use-streaming.ts
