[package]
name = "lazycamhud"
version = "0.6.5"
description = "Martian-style vlog recorder"
authors = ["harry"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lazycamhud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
getrandom = "0.2"
tiny_http = "0.12"

# Ship Vitals (battery/CPU/RAM/uptime). starship-battery's darwin backend links
# IOKit, which is unavailable on iOS (fails at link time), so these are built for
# non-iOS targets only — the system_vitals command is gated to `desktop` to match.
[target.'cfg(not(target_os = "ios"))'.dependencies]
sysinfo = "0.33"
starship-battery = "0.10"

# SIGTERM the streaming ffmpeg so it finalizes the local MP4 before exiting
# (SIGKILL truncates it). Unix only; Windows falls back to TerminateProcess.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

