[package]
name = "lazycamhud"
version = "0.7.1"
description = "Martian-style vlog recorder"
authors = ["harry"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lazycamhud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
getrandom = "0.2"
tiny_http = "0.12"
# Enumerate local IPv4 addresses so the Sensor API can show which host/IP to
# bind + connect to (getifaddrs under the hood; works on macOS + iOS).
local-ip-address = "0.6"
# CPU / RAM / uptime for the Ship Vitals HUD strip (works on macOS + iOS).
sysinfo = "0.33"
# PIN hash+salt in the Keychain (macOS + iOS) via the Apple Security framework.
keyring = { version = "3", default-features = false, features = ["apple-native"] }

# Battery for Ship Vitals. starship-battery's darwin backend links IOKit, which
# is unavailable on iOS (fails at link time), so battery is non-iOS only; on iOS
# read_battery returns None (CPU/RAM/uptime still work).
[target.'cfg(not(target_os = "ios"))'.dependencies]
starship-battery = "0.10"

# SIGTERM the streaming ffmpeg so it finalizes the local MP4 before exiting
# (SIGKILL truncates it). Unix only; Windows falls back to TerminateProcess.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

